--- a/core/src/main/res/values-br/strings.xml
+++ b/core/src/main/res/values-br/strings.xml
@@ -28,6 +28,7 @@
   <string name="notification_pref_fragment">Rebuzadurioù</string>
   <!--Google Assistant-->
   <string name="app_action_not_found">N\'eo ket bet kavet \"%1$s\"</string>
+  <!--SwipeActions-->
   <!--Statistics fragment-->
   <string name="total_time_listened_to_podcasts">Padelezh ar rannoù lennet:</string>
   <string name="statistics_details_dialog">%1$d war %2$d rann kroget.\n\nLennet %3$s war %4$s.</string>
@@ -84,15 +85,11 @@
   <string name="shownotes_label">Notennoù ar rann</string>
   <string name="shownotes_contentdescription">Riklit d\'an nec\'h evit lenn notennoù ar rann</string>
   <string name="episodes_suffix">\u0020rannoù</string>
-  <string name="processing_label">O keweriañ</string>
   <string name="close_label">Serriñ</string>
   <string name="retry_label">Klask en-dro</string>
   <string name="auto_download_label">Pellgargañ emgefreek</string>
-  <string name="auto_download_apply_to_items_title">Arloañ d\'ar rannoù kent</string>
-  <string name="auto_download_apply_to_items_message">An arventenn nevez <i>Pellgargañ Emgefreek</i> a vo arloet d\'ar rannoù nevez ent emgefreek.\nHa fellout a rafe deoc\'h e lakaat war ar rannoù kent ivez?</string>
   <string name="auto_delete_label">Dilemel ar rannoù ent emgefreek</string>
   <string name="feed_volume_reduction">Izelaat an ampled</string>
-  <string name="feed_volume_reduction_summary">Izelaat ampled ar rannoù da-heul: %1$s</string>
   <string name="feed_volume_reduction_off">hini ebet</string>
   <string name="feed_volume_reduction_light">izel</string>
   <string name="feed_volume_reduction_heavy">pounner</string>
@@ -118,13 +115,6 @@
     <item quantity="few">%d devezh goude vefe echuet </item>
     <item quantity="many">%d a zevezhioù goude vefe echuet </item>
     <item quantity="other">%d devezh goude vefe echuet </item>
-  </plurals>
-  <plurals name="num_selected_label">
-    <item quantity="one">%d diuzet</item>
-    <item quantity="two">%d diuzet</item>
-    <item quantity="few">%d diuzet</item>
-    <item quantity="many">%d diuzet</item>
-    <item quantity="other">%d diuzet</item>
   </plurals>
   <plurals name="num_episodes">
     <item quantity="one">%d rann</item>
@@ -245,8 +235,6 @@
   <string name="remove_from_favorite_label">Dilemel eus ar sinedoù</string>
   <string name="visit_website_label">Gweladenniñ al lec\'hienn</string>
   <string name="skip_episode_label">Tremen a rann</string>
-  <string name="activate_auto_download">Gweredekaat ar pellgargañ emgefreek</string>
-  <string name="deactivate_auto_download">Diweredekaat ar pellgargañ emgefreek</string>
   <string name="reset_position">Adderaouekaat al lec\'hiadur lenn</string>
   <string name="removed_item">Elfenn dilamet</string>
   <string name="no_items_selected">N\'eus bet diuzet netra</string>
@@ -274,7 +262,6 @@
   <string name="download_error_wrong_size">Kollet eo bet ar c\'hennaskañ gant an dafariad a-raok fin ar pellgargadur</string>
   <string name="download_error_blocked">Stanket eo bet ar pellgargadur gant un arload all eus ho penveg.</string>
   <string name="download_error_certificate">N\'haller ket implijout ur c\'hennask suraet. Marteze eo un arload all eus ho penveg o stankañ ar pellgargadur, pe n\'ez a ket en-dro un dra bennak gant testenioù an dafariad.</string>
-  <string name="download_canceled_autodownload_enabled_msg">Pellgargadur nullet\nDiweredekaet ar <i>pellgargadur emgefreek</i> evit an elfenn-mañ</string>
   <string name="download_report_title">Pellgargañ echuet gant fazi(où)</string>
   <string name="auto_download_report_title">Pellgargañ emgefreek echuet</string>
   <string name="download_error_io_error">Fazi lenn/skrivañ</string>
@@ -287,7 +274,6 @@
     <item quantity="many">%d a bellgargadurioù a chom</item>
     <item quantity="other">%d pellgargadur a chom</item>
   </plurals>
-  <string name="service_shutting_down">Emañ ar servij o paouez</string>
   <string name="download_notification_title">O pellgargañ roadennoù ar podskignad</string>
   <string name="download_log_title_unknown">Titl dianav</string>
   <string name="download_type_feed">Lanv</string>
@@ -319,7 +305,6 @@
   <string name="no_media_label">N\'eus restr media ebet gant an elfenn</string>
   <!--Queue operations-->
   <string name="lock_queue">Prennañ al lost</string>
-  <string name="unlock_queue">Dibrennañ al lost</string>
   <string name="queue_locked">Lost prennet</string>
   <string name="queue_unlocked">Lost dibrennet</string>
   <string name="queue_lock_warning">Ma prennit al lost ne vo ket tu deoc\'h riklañ pe adurzhiañ ar rannoù.</string>
@@ -499,8 +484,6 @@
   <string name="enqueue_location_front">E penn ar roll</string>
   <string name="enqueue_location_after_current">Goude ar rann bremanel</string>
   <string name="pref_smart_mark_as_played_disabled">Diweredekaet</string>
-  <string name="pref_image_cache_size_title">Ment krubuilh ar skeudennoù</string>
-  <string name="pref_image_cache_size_sum">Ment ar c\'hrubuilh evit ar skeudennoù.</string>
   <string name="documentation_support">Diellerezh ha skoazell</string>
   <string name="visit_user_forum">Forom an implijerien</string>
   <string name="bug_report_title">Danevellañ ur beug</string>
@@ -645,7 +628,6 @@
   <!--gpodder.net-->
   <string name="gpodnet_taglist_header">RUMMADOÙ</string>
   <string name="gpodnet_toplist_header">PODSKIGNADOÙ BRUDET</string>
-  <string name="gpodnet_suggestions_header">ALIOÙ</string>
   <string name="gpodnet_search_hint">Klask war gpodder.ner</string>
   <string name="gpodnetauth_login_butLabel">Kennaskañ</string>
   <string name="gpodnetauth_encryption_warning">Ar ger-tremen hag ar roadennoù n\'int ket sifret!</string>
@@ -740,22 +722,6 @@
   <string name="local_feed_description">Krouet eo bet ar podskignad galloudel-mañ en ur ouzhpennañ un teuliad da AntennaPod.</string>
   <string name="unable_to_start_system_file_manager">N\'haller ket loc\'hañ merour restroù ar reizhiad</string>
   <string name="filter">Sil</string>
-  <!--Episodes apply actions-->
-  <string name="all_label">An holl</string>
-  <string name="selected_all_label">Diuzet eo bet an holl rannoù</string>
-  <string name="select_none_label">Hini ebet</string>
-  <string name="deselected_all_label">Diziuzet eo bet an holl rannoù</string>
-  <string name="played_label">Lennet</string>
-  <string name="selected_played_label">Rannoù lennet diuzet</string>
-  <string name="unplayed_label">Anlennet </string>
-  <string name="selected_unplayed_label">Rannoù anlennet diuzet</string>
-  <string name="downloaded_label">Pellgarget</string>
-  <string name="selected_downloaded_label">Rannoù pellgarget diuzet</string>
-  <string name="not_downloaded_label">N\'eo ket pellgarget</string>
-  <string name="selected_not_downloaded_label">Rannoù n\'int ket pellgarget diuzet</string>
-  <string name="selected_queued_label">Rannoù diuzet el lost</string>
-  <string name="selected_not_queued_label">Rannoù diuzet n\'int ket el lost</string>
-  <string name="selected_has_media_label">Diuzañ ar rannoù gant media</string>
   <string name="hide_is_favorite_label">Ur sined eo</string>
   <string name="not_favorite">N\'eo ket ur sined</string>
   <string name="hide_downloaded_episodes_label">Pellgarget</string>
@@ -796,9 +762,6 @@
   <!--Audio controls-->
   <string name="audio_controls">Reoliadurioù aodio</string>
   <string name="playback_speed">Tizh lenn</string>
-  <string name="volume">Ampled</string>
-  <string name="left_short">K</string>
-  <string name="right_short">D</string>
   <string name="audio_effects">Efedoù aodio</string>
   <string name="stereo_to_mono">Meskañ: stereo pe mono</string>
   <string name="sonic_only">Sonic hepken</string>
