--- a/core/src/main/res/values-gl/strings.xml
+++ b/core/src/main/res/values-gl/strings.xml
@@ -28,6 +28,13 @@
   <string name="notification_pref_fragment">Notificacións</string>
   <!--Google Assistant-->
   <string name="app_action_not_found">Non se atopa \"%1$s\"</string>
+  <!--SwipeActions-->
+  <string name="swipeactions_label">Accións ao desprazar</string>
+  <string name="swipeactions_summary">Elixe o que acontecerá cando desprazas sobre un episodio na lista</string>
+  <string name="swipe_right">Despraza á dereita</string>
+  <string name="swipe_left">Despraza á esquerda</string>
+  <string name="enable_swipeactions">Activar as Acción de desprazamento para esta Pantalla</string>
+  <string name="change_setting">Cambiar</string>
   <!--Statistics fragment-->
   <string name="total_time_listened_to_podcasts">Duración total dos episodios reproducidos:</string>
   <string name="statistics_details_dialog">%1$d de %2$d episodios iniciados.\n\nReproducidos %3$s de %4$s.</string>
@@ -84,15 +91,12 @@
   <string name="shownotes_label">Notas do episodio</string>
   <string name="shownotes_contentdescription">despraza hacia arriba para ler as notas</string>
   <string name="episodes_suffix">\u0020episodios</string>
-  <string name="processing_label">Procesando</string>
   <string name="close_label">Pechar</string>
   <string name="retry_label">Reintentar</string>
   <string name="auto_download_label">Incluír en descargas automáticas</string>
-  <string name="auto_download_apply_to_items_title">Aplicar a episodios previos</string>
-  <string name="auto_download_apply_to_items_message">A nova función <i>Descarga automática</i> aplicarase automáticamente aos novos episodios.\nQueres que tamén se aplique aos episodios publicados con anterioridade?</string>
   <string name="auto_delete_label">Borrado automático do episodio</string>
   <string name="feed_volume_reduction">Redución do volume</string>
-  <string name="feed_volume_reduction_summary">Baixar o volume para os episodios desta fonte: %1$s</string>
+  <string name="feed_volume_reduction_summary">Baixar o volume para os episodios deste podcast: %1$s</string>
   <string name="feed_volume_reduction_off">Apagado</string>
   <string name="feed_volume_reduction_light">Claro</string>
   <string name="feed_volume_reduction_heavy">Forte</string>
@@ -114,8 +118,8 @@
     <item quantity="other">%d días despois de rematar</item>
   </plurals>
   <plurals name="num_selected_label">
-    <item quantity="one">%d seleccionado</item>
-    <item quantity="other">%d seleccionados</item>
+    <item quantity="one">%1$d / %2$d seleccionado</item>
+    <item quantity="other">%1$d / %2$d seleccionados</item>
   </plurals>
   <plurals name="num_episodes">
     <item quantity="one">%d episodio</item>
@@ -152,6 +156,7 @@
   <string name="share_website_url_label">Enderezo sitio web</string>
   <string name="share_feed_url_label">URL da fonte do podcast</string>
   <string name="feed_delete_confirmation_msg">Por favor, confirme que quere eliminar o podcast \"%1$s\" e TODOS os seus episodios (incluídos os xa descargados).</string>
+  <string name="feed_delete_confirmation_msg_batch">Confirma que desexas eliminar os podcast seleccionados e TODOS os seus episodios (incluńdo os descargados).</string>
   <string name="feed_delete_confirmation_local_msg">Confirma que queres eliminar o podcast \"%1$s\". Os ficheiros no cartafol local non serán eliminados.</string>
   <string name="feed_remover_msg">Eliminando o podcast</string>
   <string name="load_complete_feed">Actualizar o podcast completo</string>
@@ -163,6 +168,11 @@
   <string name="open_podcast">Abrir podcast</string>
   <string name="please_wait_for_data">Agarda ata que se carguen os datos</string>
   <string name="updates_disabled_label">Actualizacións desactivadas</string>
+  <plurals name="updated_feeds_batch_label">
+    <item quantity="one">%d subscrición actualizada.</item>
+    <item quantity="other">%d subscricións actualizadas.</item>
+  </plurals>
+  <string name="add_to_folder">Engadir ao cartafol</string>
   <!--actions on feeditems-->
   <string name="download_label">Descargar</string>
   <plurals name="downloading_batch_label">
@@ -182,6 +192,8 @@
   <string name="remove_new_flag_label">Quitar marca \"novo\"</string>
   <string name="removed_new_flag_label">Eliminouse marca \"novo\"</string>
   <string name="mark_read_label">Marcar como reproducido</string>
+  <string name="marked_as_played_label">Marcado como reproducido</string>
+  <string name="marked_as_unplayed_label">Marcado como non reproducido</string>
   <string name="mark_read_no_media_label">Marcar como lido</string>
   <string name="play_this_to_seek_position">Para ir á posición, debes reproducir o episodio</string>
   <plurals name="marked_read_batch_label">
@@ -209,8 +221,6 @@
   <string name="remove_from_favorite_label">Quitar dos favoritos</string>
   <string name="visit_website_label">Visitar sitio web</string>
   <string name="skip_episode_label">Omitir episodio</string>
-  <string name="activate_auto_download">Activar a descarga automática</string>
-  <string name="deactivate_auto_download">Desactivar a descarga automática</string>
   <string name="reset_position">Reiniciar a posición de reprodución</string>
   <string name="removed_item">Elmento eleminado</string>
   <string name="no_items_selected">Sen selección</string>
@@ -238,7 +248,6 @@
   <string name="download_error_wrong_size">Perdeuse a conexión co servidor antes de completar a descarga</string>
   <string name="download_error_blocked">A descarga foi bloqueada por outra app no teu dispositivo.</string>
   <string name="download_error_certificate">Non se estableceu unha conexión segura. Pode significar que outra app no teu dispositivo bloqueou a descarga, ou que algo non é correcto nos certificados do servidor.</string>
-  <string name="download_canceled_autodownload_enabled_msg">Descarga cancelada\nDesactivouse a <i>Descarga Automática</i> para este elemento</string>
   <string name="download_report_title">Descargas completadas con erro(s)</string>
   <string name="auto_download_report_title">Descarga automática completada</string>
   <string name="download_error_io_error">Fallo IO</string>
@@ -248,7 +257,7 @@
     <item quantity="one">%d descarga restante</item>
     <item quantity="other">%d descargas restantes</item>
   </plurals>
-  <string name="service_shutting_down">Apagando o servizo</string>
+  <string name="completing">Rematando...</string>
   <string name="download_notification_title">Descargando datos do podcast</string>
   <string name="download_log_title_unknown">Título descoñecido</string>
   <string name="download_type_feed">Fonte</string>
@@ -280,7 +289,6 @@
   <string name="no_media_label">O elemento non conten un ficheiro multimedia</string>
   <!--Queue operations-->
   <string name="lock_queue">Bloquear a cola</string>
-  <string name="unlock_queue">Desbloquear a cola</string>
   <string name="queue_locked">Cola bloqueada</string>
   <string name="queue_unlocked">Cola desbloqueada</string>
   <string name="queue_lock_warning">Se bloqueas a cola, non poderás quitar ou mover os episodios.</string>
@@ -457,8 +465,6 @@
   <string name="enqueue_location_front">Diante</string>
   <string name="enqueue_location_after_current">Tras o episodio actual</string>
   <string name="pref_smart_mark_as_played_disabled">Desactivado</string>
-  <string name="pref_image_cache_size_title">Tamaño da caché de imaxes</string>
-  <string name="pref_image_cache_size_sum">Tamaño da caché en disco para as imaxes.</string>
   <string name="documentation_support">Documentación &amp; Axuda</string>
   <string name="visit_user_forum">Foro de usuarias</string>
   <string name="bug_report_title">Informar de fallo</string>
@@ -524,6 +530,7 @@
   <string name="licenses_summary">AntennaPod toma como fonte outro software</string>
   <!--Search-->
   <string name="search_status_no_results">Non se atoparon resultados</string>
+  <string name="type_to_search">Escribe a palabra a buscar</string>
   <string name="search_label">Buscar</string>
   <string name="no_results_for_query">Non hai resultados para \"%1$s\"</string>
   <!--Synchronization-->
@@ -594,7 +601,6 @@
   <!--gpodder.net-->
   <string name="gpodnet_taglist_header">CATEGORÍAS</string>
   <string name="gpodnet_toplist_header">PODCASTS TOP</string>
-  <string name="gpodnet_suggestions_header">SUXESTIÓNS</string>
   <string name="gpodnet_search_hint">Buscar en gpodder.net</string>
   <string name="gpodnetauth_login_butLabel">Conexión</string>
   <string name="gpodnetauth_encryption_warning">O contrasinal e os datos non están cifrados!</string>
@@ -689,22 +695,6 @@
   <string name="local_feed_description">O podcast virtual foi creado ó engadir un cartafol a AntennaPod.</string>
   <string name="unable_to_start_system_file_manager">Non foi posible abrir o xestor de ficheiros</string>
   <string name="filter">Filtrado</string>
-  <!--Episodes apply actions-->
-  <string name="all_label">Todo</string>
-  <string name="selected_all_label">Seleccionar todos os episodios</string>
-  <string name="select_none_label">Nada</string>
-  <string name="deselected_all_label">Todos os episodios deseleccionados</string>
-  <string name="played_label">Reproducidos</string>
-  <string name="selected_played_label">Episodios reproducidos seleccionados</string>
-  <string name="unplayed_label">Non reproducidos</string>
-  <string name="selected_unplayed_label">Episodios non reproducidos seleccionados</string>
-  <string name="downloaded_label">Descargados</string>
-  <string name="selected_downloaded_label">Episodios descargados seleccionados</string>
-  <string name="not_downloaded_label">Non descargados</string>
-  <string name="selected_not_downloaded_label">Episodios non descargados seleccionados</string>
-  <string name="selected_queued_label">Seleccionados os episodios na cola</string>
-  <string name="selected_not_queued_label">Seleccionados os episodios fora da cola</string>
-  <string name="selected_has_media_label">Seleccionados episodios que inclúen medios</string>
   <string name="hide_is_favorite_label">É favorito</string>
   <string name="not_favorite">Non favorito</string>
   <string name="hide_downloaded_episodes_label">Descargado</string>
@@ -745,9 +735,6 @@
   <!--Audio controls-->
   <string name="audio_controls">Controis de audio</string>
   <string name="playback_speed">Velocidade de reprodución</string>
-  <string name="volume">Volume</string>
-  <string name="left_short">L</string>
-  <string name="right_short">R</string>
   <string name="audio_effects">Efectos de son</string>
   <string name="stereo_to_mono">Comprimir: stereo a mono</string>
   <string name="sonic_only">Só Sonic</string>
